Fixes logo on iphone screen sizes (Closes #1)

--- a/assets/scss/components/_logo.scss
+++ b/assets/scss/components/_logo.scss
@@ -7,7 +7,7 @@
 	margin-top: 55px;
 	margin-bottom: 10px;
 	line-height: 0.7em;
-	font-size: 2.5rem;
+	font-size: 2rem;
 
 	a {
 		color: $main-header-color;
@@ -19,18 +19,18 @@
 		}
 
 		.name {
-			width: 150px;
+			width: 130px;
 			text-align: right;
 		}
 
 		.pipe {
 			border-left: 1px solid $main-header-color;
-			height: 77px;
+			height: 64px;
 			margin: 0 10px;
 		}
 
 		.nick {
-			width: 155px;
+			width: 140px;
 			text-align: left;
 		}
 
@@ -45,6 +45,24 @@
 
 		&:hover {
 			color: $main-header-highlight-color;
+		}
+	}
+
+	@media only screen and (min-width: 481px) {
+		font-size: 2.5rem;
+
+		a {
+			.name {
+				width: 150px;
+			}
+
+			.pipe {
+				height: 77px;
+			}
+
+			.nick {
+				width: 155px;
+			}
 		}
 	}
 
